# QR-code-decoder-simulator

./: .gitignore  CMakeLists.txt  GameScreen.qml  LICENSE  MainMenu.qml  README.md  StatsScreen.qml  TutorialScreen.qml  draft.autosave  gamecontroller.cpp  gamecontroller.h  gridmodel.cpp  gridmodel.h  main.cpp  main.qml  words_easy.txt  words_hard.txt  words_normal.txt
